[metadata]
name = j2
author = Brian Stewart
author-email = brian@thecodesmith.com
summary = OpenStack's setup automation in a reusable form
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/thecodesmith/j2
project_urls =
    Bug Tracker = https://github.com/thecodesmith/j2/issues
    Documentation = https://github.com/thecodesmith/j2
    Source Code = https://github.com/thecodesmith/j2
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    jinja2
    templating

[files]
packages = j2
